Edited Phone Styles & deleted unnecessary file, Arranged input and output boxes differntly on mobile devices and smaller displays

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -158,3 +158,48 @@ html, body, #root {
 img {
   max-width: 50px;
 }
+
+/* Small Display Styles */
+
+@media (max-width:600px)
+{
+  .dashboard-wrapper
+  {
+    width: 100%;
+    margin: 0;
+    border-radius: 0;
+    padding: 20px;
+    box-sizing: border-box;
+  }
+
+  .top-row
+  {
+    flex-direction: column;
+    gap: 12px;
+  }
+
+  .main-row
+  {
+    grid-template-columns: 1fr;
+    gap: 16px;
+  }
+
+  .history,
+  .center,
+  .chart
+  {
+    width: 100%;
+    box-sizing: border-box;
+  }
+
+  .image-drop
+  {
+    height: 150px;
+  }
+  .field input,
+  .field select
+  {
+    width: 100%;
+    box-sizing: border-box;
+  }
+}
